--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,14 @@
     <forge-project-id>lmdbjni</forge-project-id>
     <forge-project-id-uc>LMDBJNI</forge-project-id-uc>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <hawtjni-version>1.9</hawtjni-version>
+    <hawtjni-version>1.17-SNAPSHOT</hawtjni-version>
+    <java.version>1.8</java.version>
+    <junit-version>4.10</junit-version>
+    <mvn-compiler-version>3.7.0</mvn-compiler-version>
+    <mvn-bundle-version>3.5.0</mvn-bundle-version>
+    <mvn-clean-version>3.1.0</mvn-clean-version>
+    <mvn-jar-version>3.1.0</mvn-jar-version>
+    <surefire-version>2.21.0</surefire-version>
     <leveldb-api-version>0.5</leveldb-api-version>
   </properties>
   
@@ -102,7 +109,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.7</version>
+      <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -114,27 +121,29 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.3</version>
+        <version>${mvn-clean-version}</version>
       </plugin>
       
       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>${mvn-compiler-version}</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>${surefire-version}</version>
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <forkMode>once</forkMode>
           <argLine>-ea</argLine>
+          <trimStackTrace>false</trimStackTrace>
           <failIfNoTests>false</failIfNoTests>
           <workingDirectory>${project.build.directory}</workingDirectory>
           <includes>
@@ -146,13 +155,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.7</version>
         <configuration>
           <reportPlugins>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
-              <version>2.7</version>
+              <version>3.0.0</version>
               <configuration>
         
                 <!-- These style sheets need to be updated for javadoc 1.4
@@ -179,7 +188,7 @@
                 <doctitle>${project.name} API Reference (${project.version})</doctitle>
                 <windowtitle>${project.name} API Reference (${project.version})</windowtitle>
                 <links>
-                  <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+                  <link>https://docs.oracle.com/javase/8/docs/api</link>
                 </links>
                 <encoding>UTF-8</encoding>
                 <locale>en_US</locale>
@@ -195,13 +204,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version>
+        <version>3.0.0</version>
 
         <dependencies>
           <dependency>
             <groupId>org.fusesource.mvnplugins</groupId>
             <artifactId>fuse-javadoc-skin</artifactId>
-            <version>1.9</version>
+            <version>1.14</version>
           </dependency>
         </dependencies>
         
@@ -229,7 +238,7 @@
           <doctitle>${project.name} API Reference (${project.version})</doctitle>
           <windowtitle>${project.name} API Reference (${project.version})</windowtitle>
           <links>
-            <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+            <link>https://docs.oracle.com/javase/8/docs/api</link>
           </links>
           <encoding>UTF-8</encoding>
           <locale>en_US</locale>
@@ -246,7 +255,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jxr-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.5</version>
         <configuration>
           <aggregate>true</aggregate>
         </configuration>
@@ -254,19 +263,19 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.0.0</version>
         <configuration>
           <excludePackageNames>*.internal</excludePackageNames>
           <linksource>true</linksource>
           <links>
-            <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+            <link>https://docs.oracle.com/javase/8/docs/api</link>
           </links>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.1.1</version>
+        <version>2.9</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -285,12 +294,12 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>surefire-report-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>${surefire-version}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>2.5</version>
+        <version>3.5.1</version>
       </plugin>
     </plugins>
   </reporting>
@@ -371,7 +380,7 @@
           <plugin>
             <groupId>com.mycila.maven-license-plugin</groupId>
             <artifactId>maven-license-plugin</artifactId>
-            <version>1.6.0</version>
+            <version>3.0.0</version>
             <configuration>
               <quiet>false</quiet>
               <header>src/main/resources/license-header.txt</header>
